<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_service">
        <SwitchPreference
            android:defaultValue="false"
            android:title="@string/settings_service_backgroundservice"
            android:summary="@string/settings_service_download"
            android:key="prefUsername"></SwitchPreference>
        <ListPreference
            android:key="prefSyncFrequency"
            android:entries="@array/syncFrequency"
            android:summary="@string/settings_service_weatherupdatesummary"
            android:entryValues="@array/syncFrequencyValues"
            android:title="@string/settings_service_weatherupdatetitle" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_notification">
        <SwitchPreference
            android:defaultValue="false"
            android:key="prefSendReport"
            android:summary="@string/settings_notification_shownotifsummary"
            android:title="@string/settings_notification_shownotiftitle"></SwitchPreference>
    </PreferenceCategory>

</PreferenceScreen>
